--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 
 body {
   padding: 10px;
+
 }
 .logo {
   width: 100%;
@@ -29,12 +30,16 @@ nav {
   width: 100%;
   height: 40px;
   display: flex;
+  gap: 10px;
 
   justify-content: space-between;
 }
 .nav-item {
   background-color: aquamarine;
-  width: 90px;
+  width: 25%;
+  
+  
+  
   align-items: center;
   justify-content: center;
   display: flex;
